# farms_network

./: .buildinfo  MANIFEST.in  genindex.html  index.html  pyproject.toml  search.html  searchindex.js  setup.py
.github/workflows/: python-cross-platform-installer.yml
ducks/source/: conf.py  index.rst
ducks/source/core/: data.rst  index.rst  integrators.rst  network.rst  node.rst  options.rst
ducks/source/introduction/: concepts.rst  getting-started.rst  index.rst  installation.rst
examples/ijspeert07/: run.py
examples/molkov2015/: run.py
examples/mouse/: components.py  run.py
examples/rhythm_generator/: run.py
farms_network/: lif_danner.pyx  lif_danner_nap.pyx
farms_network/core/: data.py  data_cy.pxd  data_cy.pyi  data_cy.pyx  edge.py  edge_cy.pxd  edge_cy.pyi  edge_cy.pyx  network.py  network_cy.pxd  network_cy.pyx  node.py  node_cy.pxd  node_cy.pyx  options.py
farms_network/models/: __init__.py  factory.py  hopf_oscillator.py  hopf_oscillator_cy.pxd  hopf_oscillator_cy.pyx  leaky_integrator_cy.pxd  li_danner.py  li_danner_cy.pxd  li_danner_cy.pyx  li_daun_interneuron_cy.pxd  li_nap_danner.py  li_nap_danner_cy.pxd  li_nap_danner_cy.pyx  linear.py  linear_cy.pxd  linear_cy.pyx  matsuoka_cy.pxd  matsuoka_cy.pyx  molkov_oscillator.py  molkov_oscillator_cy.pxd  molkov_oscillator_cy.pyx  morris_lecar_cy.pyx  oscillator.py  oscillator_cy.pxd  oscillator_cy.pyx  relay.py  relay_cy.pxd  relay_cy.pyx  relu.py  relu_cy.pxd  relu_cy.pyx
farms_network/noise/: ornstein_uhlenbeck.pxd  ornstein_uhlenbeck.py  ornstein_uhlenbeck_cy.pxd  ornstein_uhlenbeck_cy.pyx
farms_network/numeric/: integrators.py  integrators_cy.pxd  integrators_cy.pyx  system_cy.pxd  system_cy.pyx
scratch/: test_gui.py  test_network.py  test_neuron.py
tests/: test_integrators.py
