[build-system]
requires = [
     "setuptools",
     "Cython >= 0.15.1",
     "numpy",
]
build-backend = "setuptools.build_meta"

[project]
dynamic = ["version"]
name = "farms_network"
description = "Module to generate, develop and visualize neural networks"
readme = "README.md"
license = {file = "LICENSE"}
dependencies = [
    "tqdm",
    "networkx",
    "farms_core",
]
classifiers = [
  "Development Status :: 3 - Beta",
  # Indicate who your project is intended for
  "Intended Audience :: Science/Research",
  "ScieTopic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Artificial Life",
  # Specify the Python versions you support here.
  "Programming Language :: Python :: 3.11",
]

[project.urls]
Homepage = "https://farmsim.dev"
Documentation = "https://farmsim.dev"
Repository = "https://github.com/farmsim/farms_network.git"
Issues = "https://github.com/farmsim/farms_network/issues"
Changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"

[project.optional-dependencies]
gui = [
    "scipy",
    "matplotlib",
    "seaborn",
    "PyQt5",
    "networkx",
    "pydot",
    "farms_core",
]
cli = ["rich",]

[project.scripts]
farms_network = "farms_network.utils.run:main"

[tool.setuptools.package-data]
farms_muscle = [
    "*.pxd",
    "core/*.pxd",
    "models/*.pxd",
    "numeric/*.pxd",
    "noise/*.pxd"
]