[build-system]
requires = ["setuptools>=68.0", "wheel", "Cython>=3.0", "numpy", "farms_core"]
build-backend = "setuptools.build_meta"

[project]
version = "0.1.0"
name = "farms_network"
description = "Module to generate, develop and visualize neural networks"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">= 3.11"
dependencies = [
    "tqdm",
    "networkx",

]
classifiers = [
  "Development Status :: 4 - Beta",
  # Indicate who your project is intended for
  "Intended Audience :: Science/Research",
  "ScieTopic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Artificial Life",
  # Specify the Python versions you support here.
  "Programming Language :: Python :: 3",
]

[project.urls]
Homepage = "https://farmsim.dev"
Documentation = "https://farmsim.dev"
Repository = "https://github.com/farmsim/farms_network.git"
Issues = "https://github.com/farmsim/farms_network/issues"
Changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"

[project.optional-dependencies]
gui = [
    "scipy",
    "matplotlib",
    "seaborn",
    "PyQt5",
    "networkx",
    "pydot",
]

[project.scripts]
farms_network = "farms_network.utils.run:main"

[tool.setuptools.package-data]
farms_network = [
    "*.pxd",
    "core/*.pxd",
    "models/*.pxd",
    "numeric/*.pxd",
    "noise/*.pxd"
]